@@ -8,6 +8,7 @@ Lib/
   ldap.schema.subentry.SubSchema.__init__()
 * Fixed typos in control decoding method
   ldap.controls.simple.OctetStringInteger.decodeControlValue()
+* Added expirmental support for draft-vchu-ldap-pwd-policy
 
 ----------------------------------------------------------------
 Released 2.4.7 2012-12-19
